--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
+LANGCHAIN_API_KEY= ""
 OPENAI_API_KEY = ""
+LLM_MODEL = "gpt-4.1-2025-04-14"
+TAVILY_API_KEY = ""
+OPENWEATHER_API_KEY = ""
+GEOAPIFY_API_KEY= ""
+RAPIDAPI_KEY = ""
+EXCHANGERATE_API_KEY = ""
